feat: implement /api/v0/misc/version endpoint
