# internal/app/api/misc/routing.go
@@ -1,0 +1,9 @@
+package misc
+
+import (
+	"github.com/gofiber/fiber/v3"
+)
+
+func Route(app fiber.Router, service Service) {
+	app.Get("/version", VersionHandler(service))
+}
